force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c.object-meta.xml
<CustomObject>
    <description>A record lifecycle stage (RLM Stage) represents when and what actions need to be executed for a record.</description>
    <label>Ardira Record Lifecycle Stage</label>
    <nameField>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ardira Record Lifecycle Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>