force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__Action_Days_After__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Action_Days_After__c</fullName>
    <description>Number of days, the stage action will be executed this many days after a record gets into the stage.</description>
    <inlineHelpText>Number of days after the trigger record meets the condition to execute the action.</inlineHelpText>
    <label>Action Days After</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>