force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__Action_Email_Template__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Action_Email_Template__c</fullName>
    <description>Select an email template to use for Send Email action for the record lifecycle stage.</description>
    <inlineHelpText>Select the email template to use when the action type is set to send an email.</inlineHelpText>
    <label>Action Email Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>