force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__Action_Time__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Action_Time__c</fullName>
    <description>Select when to execute the action: At Invocation, Future Date Time and Days after invocation.</description>
    <inlineHelpText>This field indicates when to execute the action once a target record meets the criteria.</inlineHelpText>
    <label>Action Time</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Invocation</fullName>
                <default>true</default>
                <label>At Invocation</label>
            </value>
            <value>
                <fullName>Days after invocation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>