force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__Action_Type__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Action_Type__c</fullName>
    <description>Select an action to execute when a record gets into the stage: Send Survey, Send Email and Custom Action.</description>
    <inlineHelpText>Select the action to be taken when a record qualifies for the lifecycle stage. Options include sending an email, sending a survey, and other actions.</inlineHelpText>
    <label>Action Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Send Survey</fullName>
                <default>true</default>
                <label>Send Survey</label>
            </value>
            <value>
                <fullName>Send Email</fullName>
            </value>
            <value>
                <fullName>Custom Action</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>