force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__Custom_Action__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Custom_Action__c</fullName>
    <description>Custom Action information.</description>
    <inlineHelpText>Specify a custom action to be executed when the record qualifies for the lifecycle stage. This can be a custom process or function.</inlineHelpText>
    <label>Custom Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>