force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__Delete_Action_Histories__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Delete_Action_Histories__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Delete RLM action history when the stage is deleted</description>
    <inlineHelpText>Delete RLM action history when the stage is deleted</inlineHelpText>
    <label>Delete Action Histories</label>
    <type>Checkbox</type>
</CustomField>