force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__From_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__From_Email_Address__c</fullName>
    <description>Select a From email address to use for Survey Notification Email Alerts.</description>
    <inlineHelpText>Specify the email address that will appear in the &quot;From&quot; field when sending emails as part of the action.</inlineHelpText>
    <label>From Email Address</label>
    <length>80</length>
    <type>Text</type>
</CustomField>