force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__Limit_Number_of_Recipients__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Limit_Number_of_Recipients__c</fullName>
    <description>If set, the lifecycle stage action will be executed only for this many recipients selected randomly from the eligible set of recipients e.g. send survey to randomly selected 50 campaign members only.</description>
    <inlineHelpText>This setting limits the number of recipients to whom the survey will be sent when the recipient filter criteria result in a large number of recipients. The specified number of recipients will be randomly selected from the total pool of recipients meeting the criteria.</inlineHelpText>
    <label>Limit Number of Recipients</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>