force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__Recipient_Entity__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Recipient_Entity__c</fullName>
    <description>The entity receiving the survey as a result of the lifecycle stage trigger.</description>
    <inlineHelpText>The entity receiving the survey or action as a result of the lifecycle stage trigger.</inlineHelpText>
    <label>Recipient Entity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>