force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__Recipient_Field3_API_Name__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Recipient_Field3_API_Name__c</fullName>
    <description>A recipient field (of type Contact, Lead, User, Email) either from a lookup or reverse lookup related object to the target object.</description>
    <inlineHelpText>A recipient object field api name (either email field or contact field or user field) that will receive the action.</inlineHelpText>
    <label>Recipient Field3 Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>