force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__Recipient_Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Recipient_Filter_Criteria__c</fullName>
    <description>The conditions used to filter which related Recipient Entities receive the survey.</description>
    <inlineHelpText>The conditions used to filter which Recipient Records receive the action.</inlineHelpText>
    <label>Recipient Filter Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>