force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__Recipient_Skip_Email_Bounced__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Recipient_Skip_Email_Bounced__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, skip recipients that have email bounced field set to true.</description>
    <inlineHelpText>Specify whether to skip recipients whose email addresses have previously bounced.</inlineHelpText>
    <label>Recipient Skip Email Bounced</label>
    <type>Checkbox</type>
</CustomField>