force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__Recipient_Target_Object_Ref_Name__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Recipient_Target_Object_Ref_Name__c</fullName>
    <description>An object ref name that represents recipient target object e.g. AccountId, ContactId, etc.</description>
    <inlineHelpText>An object ref name that represents recipient target object e.g. AccountId, ContactId, etc.</inlineHelpText>
    <label>Recipient Object Reference Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>