force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__Record_Lifecycle_Management__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Record_Lifecycle_Management__c</fullName>
    <description>Master relation to Record Lifecycle Maps.</description>
    <label>Record Lifecycle Maps</label>
    <referenceTo>ArdiraSurvey__Ardira_Record_Lifecycle_Management__c</referenceTo>
    <relationshipName>Record_Lifecycle_Stages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>