force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__Skip_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Skip_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, skip recipients that have email opt out field set to true.</description>
    <inlineHelpText>This setting ensures that surveys are not sent to recipients who have opted out. Enabling this option respects the preferences of recipients who have chosen not to receive further surveys, thereby maintaining compliance with privacy standards and improving recipient satisfaction.</inlineHelpText>
    <label>Skip Opt Out</label>
    <type>Checkbox</type>
</CustomField>