force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__Stage_Description__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Stage_Description__c</fullName>
    <description>Stage Description.</description>
    <label>Stage Description</label>
    <type>TextArea</type>
</CustomField>