force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__Survey_Not_Assigned_Within_Days__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Survey_Not_Assigned_Within_Days__c</fullName>
    <description>If set, if a recipient has received action in the specified number of days, the recipient will not receive action.</description>
    <inlineHelpText>This setting ensures that a survey is only sent to a recipient if they have not received a survey within the specified number of days. It helps to prevent survey fatigue by controlling the frequency of survey distribution to the same recipient.</inlineHelpText>
    <label>Survey Not Assigned Within Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>