force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/fields/ArdiraSurvey__Target_Records_Criteria__c.field-meta.xml
<CustomField>
    <fullName>ArdiraSurvey__Target_Records_Criteria__c</fullName>
    <description>A JSON representation of filter conditions to filter records that are included in this stage action.</description>
    <inlineHelpText>A JSON representation of filter conditions to filter records that are included in this stage action.</inlineHelpText>
    <label>Filter Records Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>