force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/validationRules/ArdiraSurvey__ActionDaysAfterValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ArdiraSurvey__ActionDaysAfterValidation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISNULL(ArdiraSurvey__Action_Days_After__c) || ISBLANK(ArdiraSurvey__Action_Days_After__c), FALSE, ArdiraSurvey__Action_Days_After__c &lt; 0)</errorConditionFormula>
    <errorDisplayField>ArdiraSurvey__Action_Days_After__c</errorDisplayField>
    <errorMessage>Please enter positive number.</errorMessage>
</ValidationRule>