force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/validationRules/ArdiraSurvey__LimitNumberOfDaysValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ArdiraSurvey__LimitNumberOfDaysValidation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISNULL(ArdiraSurvey__Limit_Number_of_Recipients__c) || ISBLANK(ArdiraSurvey__Limit_Number_of_Recipients__c), FALSE, ArdiraSurvey__Limit_Number_of_Recipients__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>ArdiraSurvey__Limit_Number_of_Recipients__c</errorDisplayField>
    <errorMessage>Please enter positive number.</errorMessage>
</ValidationRule>