force-app/main/default/objects/ArdiraSurvey__Ardira_Record_Lifecycle_Stage__c/validationRules/ArdiraSurvey__SurveyNotSendInDaysValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>ArdiraSurvey__SurveyNotSendInDaysValidation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(ISNULL(ArdiraSurvey__Survey_Not_Assigned_Within_Days__c) || ISBLANK(ArdiraSurvey__Survey_Not_Assigned_Within_Days__c), FALSE, ArdiraSurvey__Survey_Not_Assigned_Within_Days__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>ArdiraSurvey__Survey_Not_Assigned_Within_Days__c</errorDisplayField>
    <errorMessage>Please enter positive number.</errorMessage>
</ValidationRule>